ajuste settings css

--- a/front/index.html
+++ b/front/index.html
@@ -1,16 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instituto Caramelo - Cadastro e Resgates</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <div class="top-bar-wrapper">
-        
+
         <header class="cabecalho">
             <div class="logo">
                 <img src="assets/logo_caramelo.png" alt="Instituto Caramelo 10 anos Logo">
@@ -60,4 +63,5 @@
     </main>
 
 </body>
+
 </html>
